# Ex2

./: AileronCommand.cpp  AileronCommand.h  AssignmentCommand.cpp  AssignmentCommand.h  BiggerCommand.cpp  BiggerCommand.h  BiggerEqualyCommand.cpp  BiggerEqualyCommand.h  CMakeLists.txt  Command.h  ConditionCommand.cpp  ConditionCommand.h  ConnectCommand.cpp  ConnectCommand.h  Div.cpp  Div.h  DivCommand.cpp  DivCommand.h  ElevatorCommand.cpp  ElevatorCommand.h  EqualyCommand.cpp  EqualyCommand.h  Expression.h  FunctionCommand.cpp  FunctionCommand.h  IfCommand.cpp  IfCommand.h  MinosCommand.cpp  MinosCommand.h  MultCommand.cpp  MultCommand.h  Multiplication.cpp  Multiplication.h  Number.cpp  Number.h  OpenDataServerCommand.cpp  OpenDataServerCommand.h  PitchCommand.cpp  PitchCommand.h  PlusCommand.cpp  (+27 more)
